--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                rotate: {
+                    '135': '135deg'
+                }
+            }
+        }
+    </script>
 </head>
 <body>
-    <section class="flex flex-col h-full bg-slate-800">
-
+    <section class="flex flex-col bg-gradient-to-r from-purple-500 to-fuchsia-500 h-screen">
+        <div class="top-2/4 left-1/2 absolute border-2 px-10 py-8 w-2/5 min-w-10 -translate-x-1/2 -translate-y-1/2">
+            <div class="relative bg-white shadow-2xl px-5 py-8 rounded-md">
+                <input type="text" placeholder="Task to be done…" class="relative border-2 p-3 w-3/5 h-11 font-medium text-sm">
+                <button id="push" class="relative float-right bg-violet-500 border-solid rounded w-3/12 h-11 font-medium text-base text-white cursor-pointer">Add</button>
+            </div>
+        </div>
     </section>
     <script src="js/main.js"></script>
 </body>
